WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
212874
TextManipulationController range of paragraph may be wrong after
r262601
https://bugs.webkit.org/show_bug.cgi?id=212874
Summary
TextManipulationController range of paragraph may be wrong after r262601
Sihui Liu
Reported
2020-06-06 20:14:52 PDT
...
Attachments
Patch
(4.84 KB, patch)
2020-06-06 20:22 PDT
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2020-06-06 20:22:30 PDT
Created
attachment 401283
[details]
Patch
EWS
Comment 2
2020-06-09 00:11:17 PDT
Committed
r262780
: <
https://trac.webkit.org/changeset/262780
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 401283
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-06-09 00:12:17 PDT
<
rdar://problem/64152823
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug