TextManipulationController range of paragraph may be wrong after r262601 https://bugs.webkit.org/show_bug.cgi?id=212874

Reviewed by Wenson Hsieh.

Source/WebCore:

Start and end position of item are not properly set in r262601.

Test: TextManipulation.CompleteTextManipulationSuccedsWhenContentOutOfParagraphIsAdded

* editing/TextManipulationController.cpp:
(WebCore::TextManipulationController::addItemIfPossible):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/TextManipulation.mm:
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/225758@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262780 268f45cc-cd09-0410-ab3c-d52691b4dbfc